--- a/ass002/Readme
+++ b/ass002/Readme
@@ -1,1 +1,6 @@
 assignment
+Epoch 054: loss 1.869 | lr 0.0003 | num_tokens 13.4 | batch_size 10 | grad_norm 29.21 | clip 1
+Epoch 054: valid_loss 3.19 | num_tokens 13.8 | batch_size 500 | valid_perplexity 24.3
+
+
+BLEU = 13.41, 45.1/18.0/9.0/4.8 (BP=0.979, ratio=0.979, hyp_len=6164, ref_len=6295)
