--- a/ass002/transformer/readme
+++ b/ass002/transformer/readme
@@ -1,1 +1,7 @@
 
+BLEU = 0.84, 15.7/1.3/0.3/0.1 (BP=1.000, ratio=1.212, hyp_len=7629, ref_len=6295)
+
+
+
+Epoch 015: loss 2.322 | lr 0.0003 | num_tokens 13.4 | batch_size 10 | grad_norm 54.21 | clip 1
+Epoch 015: valid_loss 5.06 | num_tokens 13.8 | batch_size 500 | valid_perplexity 158
