--- a/ass002/transformer/readme
+++ b/ass002/transformer/readme
@@ -5,3 +5,10 @@ BLEU = 0.84, 15.7/1.3/0.3/0.1 (BP=1.000, ratio=1.212, hyp_len=7629, ref_len=6295
 
 Epoch 015: loss 2.322 | lr 0.0003 | num_tokens 13.4 | batch_size 10 | grad_norm 54.21 | clip 1
 Epoch 015: valid_loss 5.06 | num_tokens 13.8 | batch_size 500 | valid_perplexity 158
+
+
+
+BLEU = 0.80, 14.7/1.0/0.3/0.1 (BP=0.980, ratio=0.980, hyp_len=6171, ref_len=6295)
+
+Epoch 015: loss 2.604 | lr 0.0003 | num_tokens 13.4 | batch_size 10 | grad_norm 49.16 | clip 1
+Epoch 015: valid_loss 4.82 | num_tokens 13.8 | batch_size 500 | valid_perplexity 124
